Changed Carousel type and Home Page edits

--- a/app/embla.css
+++ b/app/embla.css
@@ -1,9 +1,9 @@
 .embla {
     max-width: 48rem;
     margin: auto;
-    --slide-height: 19rem;
+    --slide-height: 156px;
     --slide-spacing: 1rem;
-    --slide-size: 80%;
+    --slide-size: 30%;
   }
   .embla__viewport {
     overflow: hidden;
@@ -20,9 +20,9 @@
     padding-left: var(--slide-spacing);
   }
   .embla__slide__img {
-    border-radius: 1.8rem;
+    /* border-radius: 1.8rem; */
     display: block;
-    height: var(--slide-height);
+    /* height: var(--slide-height); */
     width: 100%;
     object-fit: cover;
   }
@@ -31,7 +31,7 @@
     grid-template-columns: auto 1fr;
     justify-content: space-between;
     gap: 1.2rem;
-    margin-top: 1.8rem;
+    margin-top: 0.9rem;
   }
   .embla__buttons {
     display: grid;
@@ -65,8 +65,8 @@
     color: var(--detail-high-contrast);
   }
   .embla__button__svg {
-    width: 35%;
-    height: 35%;
+    width: 25%;
+    height: 25%;
   }
   .embla__dots {
     display: flex;
@@ -107,7 +107,7 @@
     box-shadow: inset 0 0 0 0.2rem var(--text-body);
   }
   .embla__parallax {
-    border-radius: 1.8rem;
+    /* border-radius: 1.8rem; */
     height: 100%;
     overflow: hidden;
   }
