--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,9 @@
   .head-text {
     @apply text-heading2-bold text-light-1;
   }
-
+  .sub-head-text {
+    @apply text-heading3-bold text-light-1;
+  }
   /* Activity */
   .activity-card {
     @apply flex items-center gap-2 rounded-md bg-dark-2 px-7 py-4;
