--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer components {
   /* main */
   .main-container {
-    @apply flex min-h-screen flex-1 flex-col items-center bg-dark-1 px-6 pb-10 pt-28 max-md:pb-32 sm:px-10;
+    @apply flex min-h-screen flex-1 flex-col items-center bg-dark-1 px-6 pb-10 pt-[4rem] max-md:pb-32 sm:px-10 ;
   }
 
   /* Head Text */
@@ -13,7 +13,7 @@
     @apply text-heading2-bold text-light-1;
   }
   .sub-head-text {
-    @apply text-heading3-bold text-light-1;
+    @apply text-heading4-medium text-light-1;
   }
   /* Activity */
   .activity-card {
@@ -77,7 +77,7 @@
   }
 
   .leftsidebar {
-    @apply sticky left-0 top-0 z-20 flex h-screen w-fit flex-col justify-between overflow-auto border-r border-r-dark-4 bg-dark-2 pb-5 pt-28 max-md:hidden;
+    @apply sticky left-0 top-0 z-20 flex h-screen w-fit flex-col justify-between overflow-auto border-r border-r-dark-4 bg-dark-2 pb-5 pt-24 max-md:hidden;
   }
 
   .leftsidebar_link {
