edits to home page styling

--- a/app/embla.css
+++ b/app/embla.css
@@ -1,10 +1,24 @@
 .embla {
-    max-width: 48rem;
+    /* max-width: 48rem; */
     margin: auto;
     --slide-height: 156px;
     --slide-spacing: 1rem;
+    --slide-size: 15%;
+  }
+
+/* 30% for medium screens (768px and smaller) */
+@media (max-width: 640px) {
+  .embla {
     --slide-size: 20%;
   }
+}
+
+/* 40% for smaller screens (640px and smaller) */
+@media (max-width: 480px) {
+  .embla {
+    --slide-size: 30%;
+  }
+}
   .embla__viewport {
     overflow: hidden;
   }
