--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
 /*DIALOG styles*/
-body {
+/* body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
@@ -13,7 +13,7 @@ body,
 html {
   height: 100%;
   margin: 0;
-}
+} */
 
 .modal-backdrop {
   position: absolute;
@@ -21,28 +21,27 @@ html {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  backdrop-filter: blur(4px);
 }
 
 .modal {
   width: 80%;
-  max-width: 500px;
+  max-width: 600px;
   height: auto;
   max-height: 500px;
   border: none;
   border-radius: 12px;
-  background-color: white;
   padding: 20px;
   position: relative;
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   font-size: 48px;
-  font-weight: 500;
+  font-weight: 500; */
 }
 
 .close-button {
@@ -68,41 +67,7 @@ html {
 
 .close-button:after {
   content: 'x';
-  color: black;
-}
-
-.cards-container {
-  display: grid;
-  grid-template-columns: repeat(3, 200px);
-  gap: 16px;
-  justify-content: center;
-  align-items: center;
-  padding: 16px;
-}
-
-.card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  background-color: #eee;
-  border-radius: 8px;
-  text-decoration: none;
-  color: black;
-  font-size: 24px;
-  font-weight: 500;
-  max-width: 200px;
-}
-
-@media (max-width: 600px) {
-  .cards-container {
-    grid-template-columns: 1fr;
-    justify-items: center;
-  }
-
-  .card {
-    width: 80%;
-  }
+  color: white;
 }
 
   /* main */
